--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "primeicons": "^4.1.0",
     "primeng": "^11.3.1",
     "react-icons": "^4.2.0",
-    "rxjs": "~6.6.0",
+    "rxjs": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
